--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,11 +1,24 @@
-<ul class="nav justify-content-end">
-  <li class="nav-item">
-    <h2 class="nav-link" routerLink="/about-me">About Me</h2>
-  </li>
-  <li class="nav-item">
-    <h2 class="nav-link" routerLink="/my-work">My Work</h2>
-  </li>
-  <li class="nav-item">
-    <h2 class="nav-link" routerLink="/contact-me">Contact Me</h2>
-  </li>
-</ul>
+<nav class="navbar">
+	<div class="container-fluid">
+		<div class="navbar-brand" routerLink="/about-me">
+			<img
+				src="https://i.imgur.com/ZHp81HB.png"
+				alt="avatar image of Dani"
+				id="avatar-img"
+				class="img-fluid"
+			/>
+			Dani Davis
+		</div>
+		<ul class="nav">
+			<li class="nav-item">
+				<h2 class="nav-link" routerLink="/about-me">About Me</h2>
+			</li>
+			<li class="nav-item">
+				<h2 class="nav-link" routerLink="/my-work">My Work</h2>
+			</li>
+			<li class="nav-item">
+				<h2 class="nav-link" routerLink="/contact-me">Contact Me</h2>
+			</li>
+		</ul>
+	</div>
+</nav>
