--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,17 +1,19 @@
-.nav {
-  margin: 5px 15px;
+img {
+	max-height: 100px;
 }
 
-.nav-link {
-  color: white;
-  padding: 20px;
-  cursor: pointer;
-  text-shadow: 1px 1px 1px #672900fa;
-  font-size: calc(1rem + 0.75vw);
+.nav-link,
+.navbar-brand {
+	color: rgb(255, 94, 14);
+	text-shadow: 1px 1px 2px rgb(255, 147, 165);
+	cursor: pointer;
+	padding: 20px;
+	/* text-shadow: 1px 1px 1px #672900fa; */
+	font-size: calc(1rem + 0.75vw);
 }
 
 .nav-link:hover {
-  padding: 18px;
-  text-shadow: 2px 2px 4px #672900fa;
-  font-size: calc(1.1rem + 0.75vw);
+	padding: 18px;
+	transform: rotate(3deg);
+	font-size: calc(1rem + 0.85vw);
 }
