--- a/src/app/my-work/my-work.component.html
+++ b/src/app/my-work/my-work.component.html
@@ -10,11 +10,11 @@
 				alt="{{ project.name }}"
 				class="col-7"
 			/>
-			<div class="project-info">
+			<!-- <div class="project-info">
 				<button class="btn btn-primary">infooo</button>
 				<br />
 				<button>infooo</button>
-			</div>
+			</div> -->
 			<p class="img-title">{{ project.name }}</p>
 		</div>
 	</div>
