--- a/src/app/contact-me/contact-me.component.css
+++ b/src/app/contact-me/contact-me.component.css
@@ -1,17 +1,38 @@
 .work-container {
-  margin: auto;
-  background-color: rgba(250, 235, 215, 0.4);
-  border-radius: 25px;
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+	margin: auto;
+	background-color: white;
+	border-radius: 25px;
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.work-container::after {
+	content: "";
+	position: absolute;
+	inset: -0.625em;
+	background: linear-gradient(
+		to bottom right,
+		rgba(251, 82, 107, 0.8),
+		rgb(255, 170, 0, 0.8)
+	);
+	filter: blur(1rem);
+	z-index: -1;
+}
+
+.row {
+	display: flex;
+	justify-content: center;
+	padding-bottom: 25px;
 }
 
 h2 {
-  color: white;
-  text-shadow: 1px 1px 1px #672900fa;
-  font-size: calc(1rem + 1.25vw);
+	margin: 30px 5px 10px 5px;
+	color: rgb(41, 41, 41);
+	text-shadow: 2px 2px 2px antiquewhite;
+	text-align: center;
+	font-size: calc(1rem + 1.25vw);
 }
 
 /* h2 {
@@ -21,6 +42,19 @@ h2 {
 } */
 
 .contact-info-container {
-  display: flex;
-  flex-direction: column;
+	display: flex;
+}
+
+.contactMethodContainer {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+}
+
+.rowItem {
+	display: inline-block;
+	margin: 10px;
+	color: #0e0e3cfa;
+	font-size: calc(0.75rem + 0.5vw);
 }
