--- a/src/app/my-work/my-work.component.html
+++ b/src/app/my-work/my-work.component.html
@@ -1,21 +1,29 @@
 <div class="container work-container col-11">
 	<div class="row">
-		<!-- column of all work gifs -->
-		<!-- each one, on hover, give it a translucent filter and present options as buttons -->
-		<h2 class="col-12">My Work:</h2>
-		<div class="project col-11" *ngFor="let project of projects">
+		<h2 class="col-12 row">My Work:</h2>
+		<div class="project col-7" *ngFor="let project of projects">
 			<img
 				(click)="this.modalenabled = true"
 				src="{{ project.imgsrc }}"
 				alt="{{ project.name }}"
-				class="col-7"
+				class=""
 			/>
-			<!-- <div class="project-info">
+			<!-- <span class="project-info col-7">
 				<button class="btn btn-primary">infooo</button>
 				<br />
 				<button>infooo</button>
-			</div> -->
+			</span> -->
 			<p class="img-title">{{ project.name }}</p>
+			<span>
+				<a href="{{ project.codebaseLink }}" target="_blank">
+					<button class="btn">Github Codebase</button>
+				</a>
+
+				<br />
+				<a href="{{ project.deployedLink }}" target="_blank">
+					<button class="btn">Deployed Application</button>
+				</a>
+			</span>
 		</div>
 	</div>
 </div>
