--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,13 +11,31 @@
 		</div>
 		<ul class="nav">
 			<li class="nav-item">
-				<h2 class="nav-link" routerLink="/about-me">About Me</h2>
+				<h2
+					class="nav-link"
+					routerLinkActive="active-link"
+					routerLink="/about-me"
+				>
+					About Me
+				</h2>
 			</li>
 			<li class="nav-item">
-				<h2 class="nav-link" routerLink="/my-work">My Work</h2>
+				<h2
+					class="nav-link"
+					routerLinkActive="active-link"
+					routerLink="/my-work"
+				>
+					My Work
+				</h2>
 			</li>
 			<li class="nav-item">
-				<h2 class="nav-link" routerLink="/contact-me">Contact Me</h2>
+				<h2
+					class="nav-link"
+					routerLinkActive="active-link"
+					routerLink="/contact-me"
+				>
+					Contact Me
+				</h2>
 			</li>
 		</ul>
 	</div>
